- hide the pill buttons bar when hiding the snip  - cleaned up when the redraw events happen so the scrollbar no longer sticks around after hiding a snippet  - changes sortables behavior so it only collapses the snippet being sorted instead of collapsing all of them (just trying out this behavior)

--- a/trunk/styles/snippely.css
+++ b/trunk/styles/snippely.css
@@ -150,11 +150,6 @@ body {
 	background-color: #fff;
 }
 
-#snippet-snips.sorting div.snip div.content {
-	overflow: hidden;
-	max-height: 42px;
-}
-
 #snippets-wrap {
 	height: 100%;
 	overflow: hidden;
@@ -238,6 +233,11 @@ div.snip {
 	padding: 6px 10px;
 	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	-webkit-border-radius: 6px;
+}
+
+div.snip.sorting div.content {
+	overflow: hidden;
+	max-height: 42px;
 }
 
 div.snip.code {
